As a registered user i can see,add and delete accounts [Delivers #175250729]
